<?xml version="1.0" encoding="utf-8"?>
<resources>
 
    <string name="app_name">lango</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_sync">Sync</string>
    <string name="course_name">MIT_Japanese_502</string>
    <string name="title_activity_ExerciseMenu">Exercises</string>
    <string name="title_activity_exercise">Exercise</string>
    <string name="title_activity_FlashcardMenu">Flash Card</string>
    <string name="title_activity_Flashcard">Flash Card</string>
    <string name="title_activity_Kanji">Kanji</string>
    <string name="sec_Exercises">Exercise</string>
    <string name="sec_Flashcards">Flash Card</string>
    <string name="sec_Grammar">Grammar</string>
    <string name="sec_Vocabulary">Vocabulary</string>
    <string name="sec_Audio">Audio</string>
    <string name="sec_Kangji">Kanji</string>
    <string name="button_record">Record</string>
    <string name="button_playback">Play Back</string>
    <string name="button_playanwser">Play Answer</string>
    <string name="button_playquestion">Play Question</string>
    <string name="image_exercise">Exercise Image</string>
    <string name="exercise_instruction">Instructions:</string>
    <string name="record_instruction">Record your answer</string>
    <string name="explanation">Explanation</string>
    <string name="ex_instruction">ex_instruction</string>
    <string name="ex_description">ex_description</string>
    <string name="ex_image">ex_image</string>
    <string name="ex_description_audio">ex_description_audio</string>
    <string name="ex_answer">ex_answer</string>
    <string name="ex_answer_audio">ex_answer_audio</string>
    <string name="ex_question">ex_question</string>
    <string name="ex_record_answer">ex_record_answer</string>
    <string name="ex_basename">ex_basename</string>
    <string name="ex_src">ex_src</string>
    <string name="ex_lesson">ex_lesson</string>
    <string name="ex_drill">ex_drill</string>
   
   
    <string name="kanji_lesson">kanji_lesson</string>
    <string name="kanji_lesson_7">Lesson 7</string>
    <string name="kanji_lesson_8">Lesson 8</string>
    <string name="kanji_lesson_9">Lesson 9</string>
    <string name="kanji_lesson_10">Lesson 10</string>
    <string name="kanji_lesson_11">Lesson 11</string>
    <string name="kanji_lesson_12">Lesson 12</string>
    <string name="kanji_serial_number">kanji_SerialN</string>
    <string name="kanji_kanji">kanji_kanji</string>
    <string name="kanji_on_yomi">kanji_on_yomi</string>
    <string name="kanji_kun_yomi">kanji_kun_yomi</string>
    <string name="kanji_meaning">kanji_meaning</string>
    <string name="kanji_compound1">kanji_compound1</string>
    <string name="kanji_compound2">kanji_compound2</string>
    <string name="kanji_compound3">kanji_compound3</string>
    <string name="kanji_compound4">kanji_compound4</string>
    <string name="kanji_compound5">kanji_compound5</string>
    <string name="kanji_compound6">kanji_compound6</string>
   
   
    <string name="unimplemented_msg">Coming soon.</string>
    <string name="about">Lango is a language app that enables students to do exercises (both speaking and listening) on the go. It synchronizes with the MIT Japanese course curriculum. More features are coming soon.</string>
    <string name="ex_help">Click the R button again to stop recording.
        Click the PB button to replay your recording.
        Swipe left and right to view more exercises.</string>
       
   
   
    <string name="copyright">© 2013 by MIT Japanese Language Program. \nAll rights reserved.</string>
    <string name="jap1">Japanese I</string>
    <string name="jap1_sub">Fall: 21F.501/551</string>
    <string name="jap2">Japanese II</string>
    <string name="jap2_sub">Spring: 21F.502/552</string>
    <string name="jap3">Japanese III</string>
    <string name="jap3_sub">Fall: 21F.503</string>
    <string name="jap4">Japanese IV</string>
    <string name="jap4_sub">Spring: 21F.504</string>
 
</resources>
