<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bk_green"
    android:orientation="vertical"
    tools:context=".ExerciseActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout style="@style/ExerciseBox" >

            <TextView
                android:id="@+id/text_instruction"
                style="@style/ExerciseText"
                android:fontFamily="Times New Roman"
                android:text="@string/exercise_instruction" />
        </RelativeLayout>

        <LinearLayout
            style="@style/ExerciseBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/text_description"
                    style="@style/ExerciseText"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical" />

                <ToggleButton
                    android:id="@+id/button_playquestion"
                    style="@style/PlayerButtonPlayQuestion_v1"
                    android:background="@drawable/selector_button_play_v1"
                    android:contentDescription="@string/button_playquestion"
                    android:gravity="center" />
            </LinearLayout>

            <TextView
                android:id="@+id/text_question"
                style="@style/ExerciseText"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical" />

            <ImageView
                android:id="@+id/image_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/image_exercise" />

            <LinearLayout
                android:id="@+id/group_record"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingTop="4dp" >

<!--                 <TextView -->
<!--                     android:id="@+id/text_recordnplayback" -->
<!--                     style="@style/ExerciseText" -->
<!--                     android:fontFamily="Times New Roman" -->
<!--                     android:text="@string/record_instruction" /> -->

                <LinearLayout
                    android:id="@+id/group_recordnplaybackbuttons"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="0dp"
                    android:layout_margin="0dp" >
                    
                    <ToggleButton
                        android:id="@+id/button_record"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:textSize="18sp"
                        android:layout_weight="1"
                        android:background="@drawable/selector_button_record_v1"
                        android:contentDescription="@string/button_record"
                        android:gravity="center" 
                        android:textOn="Record"
                        android:textOff="Record"/>

                    <ToggleButton
                        android:id="@+id/button_playback"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:textSize="18sp"
                        android:layout_weight="1"
                        android:background="@drawable/selector_button_play_v1"
                        android:contentDescription="@string/button_playback"
                        android:gravity="center" 
                        android:textOn="Play Back"
                        android:textOff="Play Back"/>

<!--                     <ToggleButton -->
<!--                         android:id="@+id/button_record" -->
<!--                         style="@style/PlayerButtonRecord_v1" -->
<!--                         android:background="@drawable/selector_button_record_v1" -->
<!--                         android:contentDescription="@string/button_record" -->
<!--                         android:gravity="left|center_vertical" /> -->

<!--                     <ToggleButton -->
<!--                         android:id="@+id/button_playback" -->
<!--                         style="@style/PlayerButtonPlayBack_v1" -->
<!--                         android:background="@drawable/selector_button_play_v1" -->
<!--                         android:contentDescription="@string/button_playback" -->
<!--                         android:gravity="left|center_vertical" /> -->
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <!-- <View style="@style/seporator" /> -->

        <LinearLayout style="@style/ExerciseBox" >

            <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

<!--                 <TextView -->
<!--                     android:id="@+id/text_explanation" -->
<!--                     style="@style/ExerciseText" -->
<!--                     android:fontFamily="Times New Roman" -->
<!--                     android:text="@string/explanation" /> -->

                <ToggleButton
                    android:id="@+id/button_answer"
                    style="@style/Button_v1"
                    android:background="@drawable/selector_button_v1"
                    android:contentDescription="@string/button_playanwser"
                    android:textOff="Explanation"
                    android:textOn="Explanation" 
                    android:layout_weight="1"/>

                <ToggleButton
                    android:id="@+id/button_playanswer"
                    style="@style/PlayerButtonPlayAnswer_v1"
                    android:background="@drawable/selector_button_play_v1"
                    android:contentDescription="@string/button_playanwser"
                    android:gravity="center" 
                    android:layout_weight="1"/>
            </LinearLayout>

            <TextView
                android:id="@+id/text_answer"
                style="@style/ExerciseText" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>